build: Detect gmtime definition via configure
This improves the portability of the codebase, e.g. by automatically
handling mingw 7.0+ which defines gmtime_s but not _r.

--- a/configure.ac
+++ b/configure.ac
@@ -507,6 +507,21 @@ AC_ARG_WITH([daemon],
   [build_bitcoind=$withval],
   [build_bitcoind=yes])
 
+dnl gmtime_r is the preferred time function
+AC_MSG_CHECKING(for gmtime_r);
+AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include <ctime>]],
+  [[ gmtime_r((const time_t *) nullptr, (struct tm *) nullptr); ]])],
+  [ AC_MSG_RESULT(yes); AC_DEFINE(HAVE_GMTIME_R, 1, [Define this symbol if gmtime_r is available]) ],
+  [ AC_MSG_RESULT(no);
+    AC_MSG_CHECKING(for MSC-style gmtime_s);
+    AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include <ctime>]],
+       [[ gmtime_s((struct tm *) nullptr, (const time_t *) nullptr); ]])],
+       [ AC_MSG_RESULT(yes) ],
+       [ AC_MSG_RESULT(no); AC_MSG_ERROR(Both gmtime_r and MSC-style gmtime_s are missing) ]
+    )
+  ]
+)
+
 use_pkgconfig=yes
 case $host in
   *mingw*)
@@ -1595,6 +1610,7 @@ AC_SUBST(EVENT_LIBS)
 AC_SUBST(EVENT_PTHREADS_LIBS)
 AC_SUBST(ZMQ_LIBS)
 AC_SUBST(QR_LIBS)
+AC_SUBST(HAVE_GMTIME_R)
 AC_SUBST(HAVE_FDATASYNC)
 AC_SUBST(HAVE_FULLFSYNC)
 AC_SUBST(HAVE_O_CLOEXEC)
